# streaming-sql

./: .gitignore  README.md
calcite/: kafka.model.json  kaka.model.json
ksqlDB/: ksql-cli.sh  ksqlDB-deployment.yaml
materialize/: materialize-deployment.yaml  psql-cli.sh
stream-generator/: .gitignore  Dockerfile  generator-deployment.yaml  generator.py  kafa-topics.yaml  kafka-topic.yaml  pyproject.toml  stream_generator.py
