[tool.poetry]
name = "stream-generator"
version = "0.1.0"
description = ""
authors = ["Thomas Cooper <tom.n.cooper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sseclient = "^0.0.26"
kafka-python = "^2.0.1"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
